Image preview code improved.

--- a/pages/YEAR_template/YEAR_template.html
+++ b/pages/YEAR_template/YEAR_template.html
@@ -60,9 +60,9 @@
         </div>
       </div>
     </div>
-    <div id="previewModal" class="modal">
+    <div class="previewModal">
       <div id="closePreview"><img src="../../assets/close_FILL0_wght400_GRAD0_opsz48.svg" alt=""></div>
-      <img id="previewImage" class="modal-content">
+      <img id="previewImage">
     </div>
   </main>
   <footer id="copyright"></footer>
