2019_business_card image preview added.

--- a/pages/work.html
+++ b/pages/work.html
@@ -161,7 +161,7 @@
         <img class="gallery" src="2019/2019_more_about_robots_BusinessCard_2.jpg"
           alt="/2019_more_about_robots_BusinessCard_Cover">
         <div class="text-box">
-          <div class="project-title">more_about_robots: Business Card</div>
+          <div class="project-title">more_about_robots:<br>Business Card</div>
           <div class="project-subtitle">2019</div>
         </div>
       </a>
