About image removed.

--- a/pages/about.html
+++ b/pages/about.html
@@ -516,13 +516,6 @@
         <br>
         <br>
         <br>
-      </div>
-      <div class="about-column-right">
-        <img src="../images/202208_TS_Portrait.jpg" alt="Tino Selic, 2022">
-        <br>
-        <br>
-        <br>
-        <br>
         <h1>Contact & Links</h1>
         <br>
         <p>
@@ -541,6 +534,13 @@
           <a href="https://www.pinterest.com/tinoselic/" target="_blank">Pinterest</a>
         </p>
       </div>
+      <!-- <div class="about-column-right">
+        <img src="../images/202208_TS_Portrait.jpg" alt="Tino Selic, 2022">
+        <br>
+        <br>
+        <br>
+        <br>
+      </div> -->
     </div>
   </main>
   <footer id="copyright"></footer>
