--- a/pages/work.html
+++ b/pages/work.html
@@ -61,7 +61,7 @@
       <a href="2024/2024_marko_vuokola_nordea.html">
         <img class="gallery" src="2024/2024_MarkoVuokola_Nordea_1.jpg" alt="2024_MarkoVuokola_Nordea_Cover">
         <div class="text-box">
-          <div class="project-title">Marko Vuokola: Screen Installation<br>Concept Visualisation</div>
+          <div class="project-title">Marko Vuokola:<br>Screen Installation<br>Concept Visualisation</div>
           <div class="project-subtitle">2024</div>
         </div>
       </a>
