--- a/pages/work.html
+++ b/pages/work.html
@@ -23,11 +23,13 @@
     </nav>
   </header>
   <main>
-    <!-- 
-    <div class="project">
-      <a href="2024_.html">
-        <img class="gallery" src="images/GN_Website_PlaceholderImage.png" alt="">
-      AURORA (2024)
+    <!-- <div class="project">
+      <a href="2024/2024_aurora.html">
+        <img class="gallery" src="2024/" alt="2024_AURORA_Cover">
+        <div class="text-box">
+          <div class="project-title">AURORA</div>
+          <div class="project-subtitle">2024</div>
+        </div>
       </a>
     </div> -->
     <div class="project">
