--- a/pages/work.html
+++ b/pages/work.html
@@ -33,6 +33,15 @@
       </a>
     </div> -->
     <div class="project">
+      <a href="2024/2024_contestationsai.html">
+        <img class="gallery" src="2024/2024_ContestationsAI_4.jpg" alt="2024_ContestationsAI_Cover">
+        <div class="text-box">
+          <div class="project-title">Contestations.AI</div>
+          <div class="project-subtitle">2024</div>
+        </div>
+      </a>
+    </div>
+    <div class="project">
       <a href="2024/2024_gn_website.html">
         <img class="gallery" src="2024/2024_GN_Website_Cover.jpg" alt="2024_GN_Website_Cover">
         <div class="text-box">
