--- a/pages/work.html
+++ b/pages/work.html
@@ -23,15 +23,15 @@
     </nav>
   </header>
   <main>
-    <!-- <div class="project">
+    <div class="project">
       <a href="2024/2024_aurora.html">
-        <img class="gallery" src="2024/" alt="2024_AURORA_Cover">
+        <img class="gallery" src="2024/2024_AURORA_Cover.jpg" alt="2024_AURORA_Cover">
         <div class="text-box">
           <div class="project-title">AURORA</div>
           <div class="project-subtitle">2024</div>
         </div>
       </a>
-    </div> -->
+    </div>
     <div class="project">
       <a href="2024/2024_contestationsai.html">
         <img class="gallery" src="2024/2024_ContestationsAI_4.jpg" alt="2024_ContestationsAI_Cover">
