Code cleaned up.

--- a/pages/YEAR_template/YEAR_template.html
+++ b/pages/YEAR_template/YEAR_template.html
@@ -47,7 +47,7 @@
         </p>
       </div>
       <div class="column right">
-        <img src="../YEAR_template/PlaceholderImage.png" alt="" class="thumbnail">
+        <img src="PlaceholderImage.png" alt="" class="thumbnail">
         <br>
         <br>
         <div class="responsive-video"><video controls src="../../videos/20230817_PortfolioBackgroundVideo.mp4"></video>
