--- a/pages/about.html
+++ b/pages/about.html
@@ -461,7 +461,7 @@
         <h1>About</h1>
         <br>
         <p>
-          I am a versatile digital artist and designer whose work spans a wide range of media—from 3D modelling and
+          Hi, my name is Tino Selić (he/him). I am a versatile digital artist and designer whose work spans a wide range of media—from 3D modelling and
           animation to websites, games, and interactive experiences. I graduated with a Bachelor of Arts degree in
           Interactive Media from Augsburg University of Applied Sciences in 2021. Currently, I am studying New Media
           (Master of Arts) at Aalto University in Espoo, Finland.
