--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
   <link rel="icon" type="image/x-icon" href="assets/favicon.svg" />
   <style>
     @font-face {
+      font-family: "Jost";
+      src: url("fonts/Jost-VariableFont_whgt.ttf");
+    }
+
+    @font-face {
       font-family: "FreeSans";
       src: url("fonts/FreeSans.woff") format('woff');
     }
@@ -36,7 +41,7 @@
       margin: 0;
       box-sizing: border-box;
       color: #fff;
-      font-family: "FreeSans", sans-serif;
+      font-family: "Jost", sans-serif;
       font-size: 14px;
     }
 
