--- a/pages/about.html
+++ b/pages/about.html
@@ -8,6 +8,11 @@
   <link rel="icon" type="image/x-icon" href="../assets/favicon.svg" />
   <style>
     @font-face {
+      font-family: "Jost";
+      src: url("../fonts/Jost-VariableFont_wght.ttf");
+    }
+
+    @font-face {
       font-family: "FreeSans";
       src: url("../fonts/FreeSans.woff") format('woff');
     }
@@ -36,7 +41,7 @@
       margin: 0;
       box-sizing: border-box;
       color: #fff;
-      font-family: "FreeSans", sans-serif;
+      font-family: "Jost", sans-serif;
       font-size: 14px;
     }
 
@@ -139,11 +144,13 @@
     }
 
     h1 {
+      font-size: 24px;
+      font-weight: normal;
       text-transform: uppercase;
     }
 
     h2 {
-      font-weight: bold;
+      font-weight: normal;
     }
 
     h3 {
@@ -461,7 +468,8 @@
         <h1>About</h1>
         <br>
         <p>
-          Hi, my name is Tino Selić (he/him). I am a versatile digital artist and designer whose work spans a wide range of media—from 3D modelling and
+          Hi, my name is Tino Selić (he/him). I am a versatile digital artist and designer whose work spans a wide range
+          of media—from 3D modelling and
           animation to websites, games, and interactive experiences. I graduated with a Bachelor of Arts degree in
           Interactive Media from Augsburg University of Applied Sciences in 2021. Currently, I am studying New Media
           (Master of Arts) at Aalto University in Espoo, Finland.
