Jost font properly implemented.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <style>
     @font-face {
       font-family: "Jost";
-      src: url("fonts/Jost-VariableFont_whgt.ttf");
+      src: url("fonts/Jost-Regular.ttf");
     }
 
     @font-face {
@@ -42,7 +42,7 @@
       box-sizing: border-box;
       color: #fff;
       font-family: "Jost", sans-serif;
-      font-size: 14px;
+      font-size: 16px;
     }
 
     body {
@@ -283,7 +283,7 @@
       }
 
       .caption {
-        font-size: 14px;
+        font-size: 16px;
       }
 
       .quote {
@@ -343,7 +343,7 @@
     </video>
   </div>
   <div class="quote">
-    Hallo. My name is Tino Selić, I am a Helsinki-based digital artist and designer.
+    Tino Selić is a Helsinki-based digital artist and designer.
   </div>
   <footer id="copyright"></footer>
   <script>
