--- a/index.html
+++ b/index.html
@@ -343,7 +343,10 @@
     </video>
   </div>
   <div class="quote">
-    Tino Selić is a Helsinki-based digital artist and designer.
+    Hello, hallo, moi :)
+    <br>
+    <br>
+    My name is Tino Selić, I am a Helsinki-based digital artist and designer.
   </div>
   <footer id="copyright"></footer>
   <script>
