Start quote updated.

--- a/index.html
+++ b/index.html
@@ -343,10 +343,10 @@
     </video>
   </div>
   <div class="quote">
-    Hello, hallo, moi :)
+    <!-- Hello, hallo, moi :)
     <br>
-    <br>
-    My name is Tino Selić, I am a Helsinki-based digital artist and designer.
+    <br> -->
+    My name is Tino Selić, I am a Helsinki-based digital artist and designer
   </div>
   <footer id="copyright"></footer>
   <script>
