--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   <link rel="icon" type="image/x-icon" href="assets/favicon.svg" />
   <style>
     @font-face {
-      font-family: "Jost";
-      src: url("fonts/Jost-Regular.ttf");
+      font-family: "Poppins";
+      src: url("fonts/Poppins-Regular.ttf");
     }
 
     @font-face {
@@ -41,8 +41,8 @@
       margin: 0;
       box-sizing: border-box;
       color: #fff;
-      font-family: "Jost", sans-serif;
-      font-size: 16px;
+      font-family: "Poppins", sans-serif;
+      font-size: 14px;
     }
 
     body {
@@ -283,7 +283,7 @@
       }
 
       .caption {
-        font-size: 16px;
+        font-size: 14px;
       }
 
       .quote {
