--- a/pages/about.html
+++ b/pages/about.html
@@ -8,53 +8,53 @@
   <link rel="icon" type="image/x-icon" href="../assets/favicon.svg" />
   <style>
     @font-face {
-      font-family: "Jost";
-      src: url("../fonts/Jost-Light.ttf");
+      font-family: "Poppins";
+      src: url("../fonts/Poppins-Light.ttf");
       font-weight: light;
     }
 
     @font-face {
-      font-family: "Jost";
-      src: url("../fonts/Jost-LightItalic.ttf");
+      font-family: "Poppins";
+      src: url("../fonts/Poppins-LightItalic.ttf");
       font-weight: light;
       font-style: italic;
     }
 
     @font-face {
-      font-family: "Jost";
-      src: url("../fonts/Jost-Regular.ttf");
+      font-family: "Poppins";
+      src: url("../fonts/Poppins-Regular.ttf");
       font-weight: normal;
     }
 
     @font-face {
-      font-family: "Jost";
-      src: url("../fonts/Jost-Italic.ttf");
+      font-family: "Poppins";
+      src: url("../fonts/Poppins-Italic.ttf");
       font-weight: normal;
       font-style: italic;
     }
 
     @font-face {
-      font-family: "Jost";
-      src: url("../fonts/Jost-SemiBold.ttf");
+      font-family: "Poppins";
+      src: url("../fonts/Poppins-SemiBold.ttf");
       font-weight: 600;
     }
 
     @font-face {
-      font-family: "Jost";
-      src: url("../fonts/Jost-SemiBoldItalic.ttf");
+      font-family: "Poppins";
+      src: url("../fonts/Poppins-SemiBoldItalic.ttf");
       font-weight: 600;
       font-style: italic;
     }
 
     @font-face {
-      font-family: "Jost";
-      src: url("../fonts/Jost-Bold.ttf");
+      font-family: "Poppins";
+      src: url("../fonts/Poppins-Bold.ttf");
       font-weight: bold;
     }
 
     @font-face {
-      font-family: "Jost";
-      src: url("../fonts/Jost-BoldItalic.ttf");
+      font-family: "Poppins";
+      src: url("../fonts/Poppins-BoldItalic.ttf");
       font-weight: bold;
       font-style: italic;
     }
@@ -88,8 +88,8 @@
       margin: 0;
       box-sizing: border-box;
       color: #fff;
-      font-family: "Jost", sans-serif;
-      font-size: 16px;
+      font-family: "Poppins", sans-serif;
+      font-size: 14px;
     }
 
     body {
@@ -231,7 +231,7 @@
     }
 
     i {
-      font-family: 'Jost Italic';
+      font-family: 'Poppins Italic';
       color: #999;
     }
 
@@ -439,11 +439,11 @@
 
     @media only screen and (min-width: 2560px) {
       * {
-        font-size: 18px;
+        font-size: 16px;
       }
 
       .caption {
-        font-size: 16px;
+        font-size: 14px;
       }
 
       footer {
