--- a/pages/about.html
+++ b/pages/about.html
@@ -8,15 +8,28 @@
   <link rel="icon" type="image/x-icon" href="../assets/favicon.svg" />
   <style>
     @font-face {
-      font-family: "Poppins";
-      src: url("../fonts/Poppins-Light.ttf");
-      font-weight: light;
+      font-family: "Jost";
+      src: url("../fonts/Jost-Regular.ttf");
+      font-weight: normal;
     }
 
     @font-face {
-      font-family: "Poppins";
-      src: url("../fonts/Poppins-LightItalic.ttf");
-      font-weight: light;
+      font-family: "Jost";
+      src: url("../fonts/Jost-Italic.ttf");
+      font-weight: normal;
+      font-style: italic;
+    }
+
+    @font-face {
+      font-family: "Jost";
+      src: url("../fonts/Jost-Bold.ttf");
+      font-weight: bold;
+    }
+
+    @font-face {
+      font-family: "Jost";
+      src: url("../fonts/Jost-BoldItalic.ttf");
+      font-weight: bold;
       font-style: italic;
     }
 
@@ -30,19 +43,6 @@
       font-family: "Poppins";
       src: url("../fonts/Poppins-Italic.ttf");
       font-weight: normal;
-      font-style: italic;
-    }
-
-    @font-face {
-      font-family: "Poppins";
-      src: url("../fonts/Poppins-SemiBold.ttf");
-      font-weight: 600;
-    }
-
-    @font-face {
-      font-family: "Poppins";
-      src: url("../fonts/Poppins-SemiBoldItalic.ttf");
-      font-weight: 600;
       font-style: italic;
     }
 
@@ -88,8 +88,8 @@
       margin: 0;
       box-sizing: border-box;
       color: #fff;
-      font-family: "Poppins", sans-serif;
-      font-size: 14px;
+      font-family: "Jost", "FreeSans", sans-serif;
+      font-size: 16px;
     }
 
     body {
@@ -147,14 +147,6 @@
       transition: top 1s ease;
     }
 
-    nav .mainMenu li {
-      padding-left: 18px;
-    }
-
-    nav .mainMenu li a {
-      line-height: 60px;
-    }
-
     nav .mainMenu .closeMenu {
       display: block;
       position: absolute;
@@ -165,6 +157,55 @@
     nav .mainMenu .closeMenu img {
       height: 26px;
       filter: invert();
+    }
+
+    nav .mainMenu li {
+      padding-left: 18px;
+    }
+
+    nav .mainMenu li a {
+      font-family: "Poppins";
+      line-height: 60px;
+    }
+
+    nav a:link {
+      text-decoration: none;
+      color: #999;
+      transition: .3s ease;
+    }
+
+    nav a:hover {
+      color: #fff;
+      transition: .3s ease;
+    }
+
+    nav a:visited {
+      color: #999;
+    }
+
+    nav a:visited:hover {
+      color: #fff;
+      transition: .3s ease;
+    }
+
+    a:link {
+      text-decoration: underline;
+      text-underline-offset: 2px;
+    }
+
+    a:hover {
+      text-decoration: underline;
+      color: #999;
+      transition: .3s ease;
+    }
+
+    a:visited {
+      color: #fff;
+    }
+
+    a:visited:hover {
+      color: #999;
+      transition: .3s ease;
     }
 
     main {
@@ -191,6 +232,7 @@
     }
 
     h1 {
+      font-family: "Poppins";
       color: #fff;
       font-weight: normal;
       text-transform: uppercase;
@@ -198,6 +240,7 @@
     }
 
     h2 {
+      font-family: "Poppins";
       color: #fff;
       font-weight: normal;
     }
@@ -249,46 +292,6 @@
       margin: 36px 0 36px 0;
       text-align: center;
       font-size: 12px;
-    }
-
-    nav a:link {
-      text-decoration: none;
-      color: #999;
-      transition: .5s ease;
-    }
-
-    nav a:hover {
-      color: #fff;
-      transition: .5s ease;
-    }
-
-    nav a:visited {
-      color: #999;
-    }
-
-    nav a:visited:hover {
-      color: #fff;
-      transition: .5s ease;
-    }
-
-    a:link {
-      text-decoration: underline;
-      text-underline-offset: 2px;
-    }
-
-    a:hover {
-      text-decoration: underline;
-      color: #999;
-      transition: .5s ease;
-    }
-
-    a:visited {
-      color: #fff;
-    }
-
-    a:visited:hover {
-      color: #999;
-      transition: .5s ease;
     }
 
     @media only screen and (min-width: 796px) {
