2019_business_card updated

--- a/pages/YEAR_template/YEAR_template.html
+++ b/pages/YEAR_template/YEAR_template.html
@@ -40,11 +40,10 @@
           Lorem ipsum...
           <br>
           <br>
-          Software:
-          <br>
-          XYZ
           <br>
         </p>
+        <h2>Software</h2>
+        <p>XYZ</p>
       </div>
       <div class="column right">
         <img src="PlaceholderImage.png" alt="" class="thumbnail">
