--- a/pages/about.html
+++ b/pages/about.html
@@ -362,13 +362,13 @@
       .about-column-left {
         float: left;
         width: 60%;
-        padding-right: 12px;
+        padding-right: 72px;
       }
 
       .about-column-right {
         float: left;
         width: 40%;
-        padding-left: 12px;
+        padding-left: 72px;
         position: -webkit-sticky;
         /* Safari */
         position: sticky;
@@ -538,7 +538,8 @@
         <br>
         <br>
         <br>
-        <br>
+      </div>
+      <div class="about-column-right">
         <h1>Clients</h1>
         <br>
         <p style="color: #fff;">
@@ -581,7 +582,6 @@
           <br>
           August - October 2022
         </p> -->
-        <br>
         <br>
         <br>
         <br>
