Nav buttons made larger for mobiles.

--- a/pages/about.html
+++ b/pages/about.html
@@ -165,7 +165,8 @@
 
     nav .mainMenu li a {
       font-family: "Poppins";
-      line-height: 60px;
+      line-height: 96px;
+      font-size: 48px;
     }
 
     nav a:link {
@@ -240,7 +241,6 @@
     }
 
     h2 {
-      font-family: "Poppins";
       color: #fff;
       font-weight: normal;
     }
@@ -322,6 +322,7 @@
       }
 
       nav .mainMenu li a {
+        font-size: 16px;
         line-height: 76px;
       }
 
