--- a/index.html
+++ b/index.html
@@ -163,7 +163,8 @@
 
     nav .mainMenu li a {
       font-family: "Poppins";
-      line-height: 60px;
+      line-height: 96px;
+      font-size: 48px;
     }
 
     nav a:link {
@@ -292,6 +293,7 @@
       }
 
       nav .mainMenu li a {
+        font-size: 16px;
         line-height: 76px;
       }
 
