--- a/pages/work.html
+++ b/pages/work.html
@@ -23,175 +23,177 @@
     </nav>
   </header>
   <main>
-    <div class="project">
+    <div class="grid">
       <a href="2024/2024_aurora.html">
-        <img class="gallery" src="2024/2024_AURORA_Cover.jpg" alt="2024_AURORA_Cover">
-        <div class="text-box">
-          <div class="project-title">AURORA</div>
-          <div class="project-subtitle">2024</div>
+        <div class="project">
+          <img class="gallery" src="2024/2024_AURORA_Cover.jpg" alt="2024_AURORA_Cover">
+          <div class="text-box">
+            <div class="project-title"><br>AURORA</div>
+            <div class="project-subtitle">2024</div>
+          </div>
         </div>
       </a>
-    </div>
-    <div class="project">
       <a href="2024/2024_contestationsai.html">
-        <img class="gallery" src="2024/2024_ContestationsAI_4.jpg" alt="2024_ContestationsAI_Cover">
-        <div class="text-box">
-          <div class="project-title">Contestations.AI</div>
-          <div class="project-subtitle">2024</div>
+        <div class="project">
+          <img class="gallery" src="2024/2024_ContestationsAI_4.jpg" alt="2024_ContestationsAI_Cover">
+          <div class="text-box">
+            <div class="project-title"><br>Contestations.AI</div>
+            <div class="project-subtitle">2024</div>
+          </div>
         </div>
       </a>
-    </div>
-    <div class="project">
       <a href="2024/2024_gn_website.html">
-        <img class="gallery" src="2024/2024_GN_Website_Cover.jpg" alt="2024_GN_Website_Cover">
-        <div class="text-box">
-          <div class="project-title">Grönlund-Nisunen: g-n.fi</div>
-          <div class="project-subtitle">2024</div>
+        <div class="project">
+          <img class="gallery" src="2024/2024_GN_Website_Cover.jpg" alt="2024_GN_Website_Cover">
+          <div class="text-box">
+            <div class="project-title"><br>g-n.fi</div>
+            <div class="project-subtitle">2024</div>
+          </div>
         </div>
       </a>
-    </div>
-    <div class="project">
       <a href="2024/2024_adungu_and_engoma.html">
-        <img class="gallery" src="2024/2024_Adungu_1.jpg" alt="2024_Adungu_Cover">
-        <div class="text-box">
-          <div class="project-title">Adungu & Engoma</div>
-          <div class="project-subtitle">2024</div>
+        <div class="project">
+          <img class="gallery" src="2024/2024_Adungu_1.jpg" alt="2024_Adungu_Cover">
+          <div class="text-box">
+            <div class="project-title"><br>Adungu & Engoma</div>
+            <div class="project-subtitle">2024</div>
+          </div>
         </div>
       </a>
-    </div>
-    <div class="project">
       <a href="2024/2024_hibiscus.html">
-        <img class="gallery" src="2024/2024_Hibiscus_Cover.jpg" alt="2024_Hibiscus_Cover">
-        <div class="text-box">
-          <div class="project-title">Hibiscus</div>
-          <div class="project-subtitle">2024</div>
+        <div class="project">
+          <img class="gallery" src="2024/2024_Hibiscus_Cover.jpg" alt="2024_Hibiscus_Cover">
+          <div class="text-box">
+            <div class="project-title"><br>Hibiscus</div>
+            <div class="project-subtitle">2024</div>
+          </div>
         </div>
       </a>
-    </div>
-    <div class="project">
       <a href="2024/2024_marko_vuokola_nordea.html">
-        <img class="gallery" src="2024/2024_MarkoVuokola_Nordea_1.jpg" alt="2024_MarkoVuokola_Nordea_Cover">
-        <div class="text-box">
-          <div class="project-title">Marko Vuokola:<br>Screen Installation<br>Concept Visualisation</div>
-          <div class="project-subtitle">2024</div>
+        <div class="project">
+          <img class="gallery" src="2024/2024_MarkoVuokola_Nordea_1.jpg" alt="2024_MarkoVuokola_Nordea_Cover">
+          <div class="text-box">
+            <div class="project-title"><br>Screen Installation<br>Concept Visualisation</div>
+            <div class="project-subtitle">2024</div>
+          </div>
         </div>
       </a>
-    </div>
-    <div class="project">
       <a href="2023/2023_piru.html">
-        <img class="gallery" src="2023/2023_Piru_Cover.jpg" alt="2023_Piru_Cover">
-        <div class="text-box">
-          <div class="project-title">Piru</div>
-          <div class="project-subtitle">2023</div>
+        <div class="project">
+          <img class="gallery" src="2023/2023_Piru_Cover.jpg" alt="2023_Piru_Cover">
+          <div class="text-box">
+            <div class="project-title"><br>Piru</div>
+            <div class="project-subtitle">2023</div>
+          </div>
         </div>
       </a>
-    </div>
-    <div class="project">
       <a href="2023/2023_colour_and_perception.html">
-        <img class="gallery" src="2023/2023_ColourAndPerception_Cover.jpg" alt="2023_ColourAndPerception_Cover">
-        <div class="text-box">
-          <div class="project-title">Colour and Perception</div>
-          <div class="project-subtitle">2023</div>
+        <div class="project">
+          <img class="gallery" src="2023/2023_ColourAndPerception_Cover.jpg" alt="2023_ColourAndPerception_Cover">
+          <div class="text-box">
+            <div class="project-title"><br>Colour and Perception</div>
+            <div class="project-subtitle">2023</div>
+          </div>
         </div>
       </a>
-    </div>
-    <div class="project">
       <a href="2023/2023_gn_843m3h.html">
-        <img class="gallery" src="2023/2023_GN_843m3h_Cover.jpg" alt="2023_GN_843m3h_Cover">
-        <div class="text-box">
-          <div class="project-title">Grönlund-Nisunen: 84,3 m3/h</div>
-          <div class="project-subtitle">2023</div>
+        <div class="project">
+          <img class="gallery" src="2023/2023_GN_843m3h_Cover.jpg" alt="2023_GN_843m3h_Cover">
+          <div class="text-box">
+            <div class="project-title"><br>84,3 m3/h</div>
+            <div class="project-subtitle">2023</div>
+          </div>
         </div>
       </a>
-    </div>
-    <div class="project">
       <a href="2023/2023_sad.html">
-        <img class="gallery" src="2023/2023_SAD_Cover.jpg" alt="">
-        <div class="text-box">
-          <div class="project-title">SAD</div>
-          <div class="project-subtitle">2023</div>
+        <div class="project">
+          <img class="gallery" src="2023/2023_SAD_Cover.jpg" alt="">
+          <div class="text-box">
+            <div class="project-title"><br>SAD</div>
+            <div class="project-subtitle">2023</div>
+          </div>
         </div>
       </a>
-    </div>
-    <div class="project">
       <a href="2022/2022_rdac.html">
-        <img class="gallery" src="2022/2022_RDAC_Cover.jpg" alt="">
-        <div class="text-box">
-          <div class="project-title">RD:AC</div>
-          <div class="project-subtitle">2022</div>
+        <div class="project">
+          <img class="gallery" src="2022/2022_RDAC_Cover.jpg" alt="">
+          <div class="text-box">
+            <div class="project-title"><br>RD:AC</div>
+            <div class="project-subtitle">2022</div>
+          </div>
         </div>
       </a>
-    </div>
-    <div class="project">
       <a href="2022/2022_forum_mentoring_brochure.html">
-        <img class="gallery" src="2022/2022_ForumMentoring_Brochure_Cover.jpg" alt="">
-        <div class="text-box">
-          <div class="project-title">Forum Mentoring eV:<br>Quality Standard Brochure</div>
-          <div class="project-subtitle">2022</div>
+        <div class="project">
+          <img class="gallery" src="2022/2022_ForumMentoring_Brochure_Cover.jpg" alt="">
+          <div class="text-box">
+            <div class="project-title"><br>Quality Standard Brochure</div>
+            <div class="project-subtitle">2022</div>
+          </div>
         </div>
       </a>
-    </div>
-    <div class="project">
       <a href="2021/2021_watch_out.html">
-        <img class="gallery" src="2021/2021_WatchOut_1.jpg" alt="">
-        <div class="text-box">
-          <div class="project-title">Watch Out!</div>
-          <div class="project-subtitle">2021</div>
+        <div class="project">
+          <img class="gallery" src="2021/2021_WatchOut_1.jpg" alt="">
+          <div class="text-box">
+            <div class="project-title"><br>Watch Out!</div>
+            <div class="project-subtitle">2021</div>
+          </div>
         </div>
       </a>
-    </div>
-    <div class="project">
       <a href="2021/2021_sunrisepunk.html">
-        <img class="gallery" src="2021/2021_Sunrisepunk_4.jpg" alt="">
-        <div class="text-box">
-          <div class="project-title">Sunrisepunk</div>
-          <div class="project-subtitle">2021</div>
+        <div class="project">
+          <img class="gallery" src="2021/2021_Sunrisepunk_4.jpg" alt="">
+          <div class="text-box">
+            <div class="project-title"><br>Sunrisepunk</div>
+            <div class="project-subtitle">2021</div>
+          </div>
         </div>
       </a>
-    </div>
-    <div class="project">
       <a href="2021/2021_blue_odyssey.html">
-        <img class="gallery" src="2021/2021_BlueOdyssey_1.jpg" alt="">
-        <div class="text-box">
-          <div class="project-title">Blue Odyssey</div>
-          <div class="project-subtitle">2021</div>
+        <div class="project">
+          <img class="gallery" src="2021/2021_BlueOdyssey_1.jpg" alt="">
+          <div class="text-box">
+            <div class="project-title"><br>Blue Odyssey</div>
+            <div class="project-subtitle">2021</div>
+          </div>
         </div>
       </a>
-    </div>
-    <div class="project">
       <a href="2020/2020_clandestine_cult.html">
-        <img class="gallery" src="2020/2020_ClandestineCult_6.jpg" alt="">
-        <div class="text-box">
-          <div class="project-title">Clandestine Cult</div>
-          <div class="project-subtitle">2020</div>
+        <div class="project">
+          <img class="gallery" src="2020/2020_ClandestineCult_6.jpg" alt="">
+          <div class="text-box">
+            <div class="project-title"><br>Clandestine Cult</div>
+            <div class="project-subtitle">2020</div>
+          </div>
         </div>
       </a>
-    </div>
-    <div class="project">
       <a href="2019/2019_business_card.html">
-        <img class="gallery" src="2019/2019_more_about_robots_BusinessCard_2.jpg"
-          alt="/2019_more_about_robots_BusinessCard_Cover">
-        <div class="text-box">
-          <div class="project-title">more_about_robots:<br>Business Card</div>
-          <div class="project-subtitle">2019</div>
+        <div class="project">
+          <img class="gallery" src="2019/2019_more_about_robots_BusinessCard_2.jpg"
+            alt="/2019_more_about_robots_BusinessCard_Cover">
+          <div class="text-box">
+            <div class="project-title"><br>Business Card</div>
+            <div class="project-subtitle">2019</div>
+          </div>
         </div>
       </a>
-    </div>
-    <div class="project">
       <a href="2018/2018_space_jellyfish.html">
-        <img class="gallery" src="2018/2018_SpaceJellyfish_Cover.jpg" alt="2018_SpaceJellyfish_Cover">
-        <div class="text-box">
-          <div class="project-title">Space Jellyfish</div>
-          <div class="project-subtitle">2018</div>
+        <div class="project">
+          <img class="gallery" src="2018/2018_SpaceJellyfish_Cover.jpg" alt="2018_SpaceJellyfish_Cover">
+          <div class="text-box">
+            <div class="project-title"><br>Space Jellyfish</div>
+            <div class="project-subtitle">2018</div>
+          </div>
         </div>
       </a>
-    </div>
-    <div class="project">
       <a href="2017/2017_m302.html">
-        <img class="gallery" src="2017/2017_M302_Cover.jpg" alt="2017_M302_Cover">
-        <div class="text-box">
-          <div class="project-title">M 3.02</div>
-          <div class="project-subtitle">2017</div>
+        <div class="project">
+          <img class="gallery" src="2017/2017_M302_Cover.jpg" alt="2017_M302_Cover">
+          <div class="text-box">
+            <div class="project-title"><br>M 3.02</div>
+            <div class="project-subtitle">2017</div>
+          </div>
         </div>
       </a>
     </div>
