--- a/pages/about.html
+++ b/pages/about.html
@@ -6,493 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="icon" type="image/x-icon" href="../assets/favicon.svg" />
-  <style>
-    @font-face {
-      font-family: "Jost";
-      src: url("../fonts/Jost-Regular.ttf");
-      font-weight: normal;
-    }
-
-    @font-face {
-      font-family: "Jost";
-      src: url("../fonts/Jost-Italic.ttf");
-      font-weight: normal;
-      font-style: italic;
-    }
-
-    @font-face {
-      font-family: "Jost";
-      src: url("../fonts/Jost-Bold.ttf");
-      font-weight: bold;
-    }
-
-    @font-face {
-      font-family: "Jost";
-      src: url("../fonts/Jost-BoldItalic.ttf");
-      font-weight: bold;
-      font-style: italic;
-    }
-
-    @font-face {
-      font-family: "Poppins";
-      src: url("../fonts/Poppins-Regular.ttf");
-      font-weight: normal;
-    }
-
-    @font-face {
-      font-family: "Poppins";
-      src: url("../fonts/Poppins-Italic.ttf");
-      font-weight: normal;
-      font-style: italic;
-    }
-
-    @font-face {
-      font-family: "Poppins";
-      src: url("../fonts/Poppins-Bold.ttf");
-      font-weight: bold;
-    }
-
-    @font-face {
-      font-family: "Poppins";
-      src: url("../fonts/Poppins-BoldItalic.ttf");
-      font-weight: bold;
-      font-style: italic;
-    }
-
-    @font-face {
-      font-family: "FreeSans";
-      src: url("../fonts/FreeSans.woff") format('woff');
-    }
-
-    @font-face {
-      font-family: "FreeSans";
-      src: url("../fonts/FreeSansBold.woff") format('woff');
-      font-weight: bold;
-    }
-
-    @font-face {
-      font-family: "FreeSans";
-      src: url("../fonts/FreeSansBoldOblique.woff") format('woff');
-      font-weight: bold;
-      font-style: italic;
-    }
-
-    @font-face {
-      font-family: "FreeSans";
-      src: url("../fonts/FreeSansOblique.woff") format('woff');
-      font-style: italic;
-    }
-
-    * {
-      padding: 0;
-      margin: 0;
-      box-sizing: border-box;
-      color: #fff;
-      font-family: "Jost", "FreeSans", sans-serif;
-      font-size: 16px;
-    }
-
-    body {
-      background: #000;
-    }
-
-    nav {
-      background-color: #000;
-      position: fixed;
-      width: 100%;
-      height: 76px;
-      top: 0;
-      z-index: 2;
-    }
-
-    nav img {
-      opacity: 1;
-      transition: .5s ease;
-      cursor: pointer;
-    }
-
-    nav img:hover {
-      opacity: 0.5;
-    }
-
-    nav .logo {
-      margin-top: 18px;
-      padding-left: 18px;
-      width: fit-content;
-    }
-
-    nav .logo img {
-      height: 40px;
-    }
-
-    nav .openMenu {
-      display: block;
-      position: absolute;
-      top: 26px;
-      right: 18px;
-    }
-
-    nav .openMenu img {
-      height: 26px;
-      filter: invert();
-    }
-
-    nav .mainMenu {
-      height: 100vh;
-      margin-top: 18px;
-      display: none;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      transition: top 1s ease;
-    }
-
-    nav .mainMenu .closeMenu {
-      display: block;
-      position: absolute;
-      top: 18px;
-      right: 18px;
-    }
-
-    nav .mainMenu .closeMenu img {
-      height: 26px;
-      filter: invert();
-    }
-
-    nav .mainMenu li {
-      padding-left: 18px;
-    }
-
-    nav .mainMenu li a {
-      font-family: "Poppins";
-      line-height: 96px;
-      font-size: 48px;
-    }
-
-    nav a:link {
-      text-decoration: none;
-      color: #999;
-      transition: .5s ease;
-    }
-
-    nav a:hover {
-      color: #fff;
-      transition: .5s ease;
-    }
-
-    nav a:visited {
-      color: #999;
-    }
-
-    nav a:visited:hover {
-      color: #fff;
-      transition: .5s ease;
-    }
-
-    a:link {
-      text-decoration: underline;
-      text-underline-offset: 2px;
-    }
-
-    a:hover {
-      text-decoration: underline;
-      color: #999;
-      transition: .5s ease;
-    }
-
-    a:visited {
-      color: #fff;
-    }
-
-    a:visited:hover {
-      color: #999;
-      transition: .5s ease;
-    }
-
-    main {
-      margin: 0px 18px 0px;
-      padding-top: 112px;
-      display: block;
-    }
-
-    .headline {
-      padding: 36px 0 36px;
-    }
-
-    .row {
-      margin-bottom: 36px;
-    }
-
-    .column {
-      width: 100%;
-      padding-bottom: 18px;
-    }
-
-    .project {
-      margin-bottom: 36px;
-    }
-
-    h1 {
-      font-family: "Poppins";
-      color: #fff;
-      font-weight: normal;
-      text-transform: uppercase;
-      letter-spacing: 1px;
-    }
-
-    h2 {
-      color: #fff;
-      font-weight: normal;
-    }
-
-    h3 {
-      font-weight: normal;
-      text-transform: uppercase;
-    }
-
-    h4 {
-      font-weight: normal;
-    }
-
-    p {
-      color: #999;
-      line-height: 1.5;
-    }
-
-    .title {
-      font-size: 12px;
-      font-style: italic;
-      max-width: 100%;
-      color: #fff;
-    }
-
-    .caption {
-      max-width: 100%;
-      text-align: left;
-      font-size: 12px;
-      font-style: italic;
-    }
-
-    i {
-      font-family: 'Poppins Italic';
-      color: #999;
-    }
-
-    img {
-      max-width: 100%;
-      margin-left: auto;
-      margin-right: auto;
-    }
-
-    img:hover {
-      transition: .5s ease;
-    }
-
-    footer {
-      margin: 36px 0 36px 0;
-      text-align: center;
-      font-size: 12px;
-    }
-
-    @media only screen and (min-width: 796px) {
-      nav {
-        display: flex;
-        justify-content: space-between;
-      }
-
-      nav .logo {
-        padding-left: 48px;
-      }
-
-      nav .openMenu {
-        display: none;
-      }
-
-      nav .mainMenu {
-        margin-top: 0px;
-        padding: 0px 48px 0px 0px;
-        height: fit-content;
-        flex-wrap: wrap;
-        display: inline-block;
-      }
-
-      nav .mainMenu li {
-        display: inline-block;
-        padding-left: 48px;
-      }
-
-      nav .mainMenu li a {
-        font-size: 16px;
-        line-height: 76px;
-      }
-
-      nav .mainMenu .closeMenu {
-        display: none;
-      }
-
-      main {
-        margin: 0px 48px 0px;
-      }
-
-      .headline {
-        position: fixed;
-        width: calc(60% - 48px);
-        top: 76px;
-        z-index: 1;
-        background-color: #000;
-      }
-
-      .column {
-        top: 201px;
-        float: left;
-        width: 50%;
-      }
-
-      .left {
-        padding-right: 12px;
-        position: -webkit-sticky;
-        /* Safari */
-        position: sticky;
-        z-index: 0;
-      }
-
-      .right {
-        padding-left: 12px;
-      }
-
-      .about-column-left {
-        float: left;
-        width: 60%;
-        padding-right: 72px;
-      }
-
-      .about-column-right {
-        float: left;
-        width: 40%;
-        padding-left: 72px;
-        position: -webkit-sticky;
-        /* Safari */
-        position: sticky;
-      }
-
-      .row::after {
-        content: "";
-        display: table;
-        clear: both;
-      }
-
-      p {
-        max-width: 800px;
-        /* text-align: justify;
-        text-justify: inter-word; */
-      }
-    }
-
-    @media only screen and (min-width: 1280px) {
-      nav .logo {
-        padding-left: 300px;
-      }
-
-      nav .mainMenu {
-        margin-top: 0px;
-        padding-right: 300px;
-      }
-
-      .spaceholder {
-        height: 330px;
-      }
-
-      main {
-        margin: 0px 300px 0px;
-      }
-
-      .headline {
-        width: calc(60% - 300px);
-      }
-    }
-
-    @media only screen and (min-width: 1920px) {
-      nav .logo {
-        padding-left: 400px;
-      }
-
-      nav .mainMenu {
-        padding-right: 400px;
-      }
-
-      main {
-        margin: 0px 400px 0px;
-      }
-
-      .headline {
-        width: calc(60% - 400px);
-      }
-
-      .column {
-        top: 221px;
-      }
-
-      .about-column-left {
-        width: 70%;
-      }
-
-      .about-column-right {
-        width: 30%;
-      }
-    }
-
-    @media only screen and (min-width: 2560px) {
-      * {
-        font-size: 16px;
-      }
-
-      .caption {
-        font-size: 14px;
-      }
-
-      footer {
-        font-size: 14px;
-      }
-
-      nav .logo {
-        padding-left: 600px;
-      }
-
-      nav .mainMenu {
-        padding-right: 600px;
-      }
-
-      nav .mainMenu li {
-        padding-left: 72px;
-      }
-
-      main {
-        margin: 0 600px;
-      }
-
-      .headline {
-        width: calc(50% - 600px);
-      }
-    }
-
-    @media only screen and (min-width: 3840px) {
-      nav .logo {
-        padding-left: 800px;
-      }
-
-      nav .mainMenu {
-        padding-right: 800px;
-      }
-
-      main {
-        margin: 0 800px;
-      }
-
-      .headline {
-        width: calc(50% - 800px);
-      }
-    }
-  </style>
+  <link rel="stylesheet" href="../style.css" />
   <title>Tino Selić - About</title>
 </head>
 
@@ -509,49 +23,50 @@
     </nav>
   </header>
   <main>
-    <div class="row">
-      <div class="about-column-left">
-        <h1>About</h1>
-        <br>
-        <p>
-          Hi, my name is Tino Selić (he/him). I am a versatile digital artist and designer whose work spans a wide range
-          of media—from 3D modelling and
-          animation to websites, games, and interactive experiences. I graduated with a Bachelor of Arts degree in
-          Interactive Media from Augsburg University of Applied Sciences in 2021. Currently, I am studying New Media
-          (Master of Arts) at Aalto University in Espoo, Finland.
-          <br>
-          <br>
-          In spring 2019, I participated in the Erasmus+ programme and spent a semester abroad at the University of
-          Lapland in Rovaniemi, Finland. During this time, I experienced the beauty of Finland's natural phenomena—the
-          northern lights, the polar night, and the midnight sun. Since then, these extraordinary scenarios have been a
-          wonderful source of inspiration for colour and light in my artistic work. Conceptually, I like to explore
-          themes of
-          nature, technology, and human emotion, often weaving narratives about the past and the future.
-          <br>
-          <br>
-          My favourite tools are Unreal Engine, Blender, TouchDesigner, and the Adobe Creative Suite (Photoshop,
-          InDesign, Illustrator, Premiere Pro, and After Effects). I am also familiar with programming in Java
-          (Processing), C++ (Unreal Engine), JavaScript, HTML, and CSS.
-          <br>
-          <br>
-          I speak German, English, and a bit of Finnish.
-        </p>
-        <br>
-        <br>
-        <br>
-      </div>
-      <div class="about-column-right">
-        <h1>Clients</h1>
-        <br>
-        <p style="color: #fff;">
-          <a href="https://g-n.fi/" target="_blank">Grönlund-Nisunen</a>
-          <br>
-          <a href="https://anhava.com/artists/marko-vuokola/" target="_blank">Marko Vuokola</a>
-          <br>
-          <a href="https://forum-mentoring.de/" target="_blank">Bundesverband Forum Mentoring e.V.</a>
-          <br>
-          more_about_robots GmbH (Bernd Liepert)
-        </p><!-- 
+    <br>
+    <h1>About</h1>
+    <br>
+    <br>
+    <h2>
+      Hi, my name is Tino Selić (he/him). I am a versatile digital artist and designer whose work spans a wide range
+      of media—from 3D modelling and animation to websites, games, and interactive experiences.
+    </h2>
+    <br>
+    <br>
+    <p>
+      I graduated with a Bachelor of Arts degree in Interactive Media from Augsburg University of Applied Sciences in
+      2021. Currently, I am studying New Media
+      (Master of Arts) at Aalto University in Espoo, Finland.
+      <br>
+      <br>
+      In spring 2019, I participated in the Erasmus+ programme and spent a semester abroad at the University of
+      Lapland in Rovaniemi, Finland. During this time, I experienced the beauty of Finland's natural phenomena—the
+      northern lights, the polar night, and the midnight sun. Since then, these extraordinary scenarios have been a
+      wonderful source of inspiration for colour and light in my artistic work. Conceptually, I like to explore
+      themes of nature, technology, and human emotion, often weaving narratives about the past and the future.
+      <br>
+      <br>
+      My favourite tools are Unreal Engine, Blender, TouchDesigner, and the Adobe Creative Suite (Photoshop,
+      InDesign, Illustrator, Premiere Pro, and After Effects). I am also familiar with programming in Java
+      (Processing), C++ (Unreal Engine), JavaScript, HTML, and CSS.
+      <br>
+      <br>
+      I speak German, English, and a bit of Finnish.
+    </p>
+    <br>
+    <br>
+    <br>
+    <h1>Clients</h1>
+    <br>
+    <p style="color: #fff;">
+      <a href="https://g-n.fi/" target="_blank">Grönlund-Nisunen</a>
+      <br>
+      <a href="https://anhava.com/artists/marko-vuokola/" target="_blank">Marko Vuokola</a>
+      <br>
+      <a href="https://forum-mentoring.de/" target="_blank">Bundesverband Forum Mentoring e.V.</a>
+      <br>
+      more_about_robots GmbH (Bernd Liepert)
+    </p><!-- 
         <h1>Experience</h1>
         <br>
         <p>
@@ -583,35 +98,33 @@
           <br>
           August - October 2022
         </p> -->
-        <br>
-        <br>
-        <br>
-        <h1>Contact & Links</h1>
-        <br>
-        <p>
-          <a href="mailto:tino.selic@gmail.com" target="_blank">Email</a>
-          <br>
-          <a href="https://www.linkedin.com/in/tino-selic/" target="_blank">LinkedIn</a>
-          <br>
-          <a href="https://www.artstation.com/tinoselic" target="_blank">Artstation</a>
-          <br>
-          <a href="https://www.behance.net/tinoselic" target="_blank">Behance</a>
-          <br>
-          <a href="https://github.com/tinoselic" target="_blank">GitHub</a>
-          <br>
-          <a href="https://www.instagram.com/tinoselic/" target="_blank">Instagram</a>
-          <br>
-          <a href="https://www.pinterest.com/tinoselic/" target="_blank">Pinterest</a>
-        </p>
-      </div>
-      <!-- <div class="about-column-right">
+    <br>
+    <br>
+    <br>
+    <h1>Contact & Links</h1>
+    <br>
+    <p>
+      <a href="mailto:tino.selic@gmail.com" target="_blank">Email</a>
+      <br>
+      <a href="https://www.linkedin.com/in/tino-selic/" target="_blank">LinkedIn</a>
+      <br>
+      <a href="https://www.artstation.com/tinoselic" target="_blank">Artstation</a>
+      <br>
+      <a href="https://www.behance.net/tinoselic" target="_blank">Behance</a>
+      <br>
+      <a href="https://github.com/tinoselic" target="_blank">GitHub</a>
+      <br>
+      <a href="https://www.instagram.com/tinoselic/" target="_blank">Instagram</a>
+      <br>
+      <a href="https://www.pinterest.com/tinoselic/" target="_blank">Pinterest</a>
+    </p>
+    <!-- <div class="about-column-right">
         <img src="../images/202208_TS_Portrait.jpg" alt="Tino Selic, 2022">
         <br>
         <br>
         <br>
         <br>
       </div> -->
-    </div>
   </main>
   <footer id="copyright"></footer>
   <script src="../app.js"></script>
