--- a/pages/work.html
+++ b/pages/work.html
@@ -28,8 +28,8 @@
         <div class="project">
           <img class="gallery" src="2024/2024_AURORA_Cover.jpg" alt="2024_AURORA_Cover">
           <div class="text-box">
-            <div class="project-title"><br>AURORA</div>
             <div class="project-subtitle">2024</div>
+            <div class="project-title">AURORA</div>
           </div>
         </div>
       </a>
@@ -37,8 +37,8 @@
         <div class="project">
           <img class="gallery" src="2024/2024_ContestationsAI_4.jpg" alt="2024_ContestationsAI_Cover">
           <div class="text-box">
-            <div class="project-title"><br>Contestations.AI</div>
             <div class="project-subtitle">2024</div>
+            <div class="project-title">Contestations.AI</div>
           </div>
         </div>
       </a>
@@ -46,8 +46,8 @@
         <div class="project">
           <img class="gallery" src="2024/2024_GN_Website_Cover.jpg" alt="2024_GN_Website_Cover">
           <div class="text-box">
-            <div class="project-title"><br>g-n.fi</div>
             <div class="project-subtitle">2024</div>
+            <div class="project-title">g-n.fi</div>
           </div>
         </div>
       </a>
@@ -55,8 +55,8 @@
         <div class="project">
           <img class="gallery" src="2024/2024_Adungu_1.jpg" alt="2024_Adungu_Cover">
           <div class="text-box">
-            <div class="project-title"><br>Adungu & Engoma</div>
             <div class="project-subtitle">2024</div>
+            <div class="project-title">Adungu & Engoma</div>
           </div>
         </div>
       </a>
@@ -64,8 +64,8 @@
         <div class="project">
           <img class="gallery" src="2024/2024_Hibiscus_Cover.jpg" alt="2024_Hibiscus_Cover">
           <div class="text-box">
-            <div class="project-title"><br>Hibiscus</div>
             <div class="project-subtitle">2024</div>
+            <div class="project-title">Hibiscus</div>
           </div>
         </div>
       </a>
@@ -73,8 +73,8 @@
         <div class="project">
           <img class="gallery" src="2024/2024_MarkoVuokola_Nordea_1.jpg" alt="2024_MarkoVuokola_Nordea_Cover">
           <div class="text-box">
-            <div class="project-title"><br>Screen Installation<br>Concept Visualisation</div>
             <div class="project-subtitle">2024</div>
+            <div class="project-title">Screen Installation<br>Concept Visualisation</div>
           </div>
         </div>
       </a>
@@ -82,8 +82,8 @@
         <div class="project">
           <img class="gallery" src="2023/2023_Piru_Cover.jpg" alt="2023_Piru_Cover">
           <div class="text-box">
-            <div class="project-title"><br>Piru</div>
             <div class="project-subtitle">2023</div>
+            <div class="project-title">Piru</div>
           </div>
         </div>
       </a>
@@ -91,8 +91,8 @@
         <div class="project">
           <img class="gallery" src="2023/2023_ColourAndPerception_Cover.jpg" alt="2023_ColourAndPerception_Cover">
           <div class="text-box">
-            <div class="project-title"><br>Colour and Perception</div>
             <div class="project-subtitle">2023</div>
+            <div class="project-title">Colour and Perception</div>
           </div>
         </div>
       </a>
@@ -100,8 +100,8 @@
         <div class="project">
           <img class="gallery" src="2023/2023_GN_843m3h_Cover.jpg" alt="2023_GN_843m3h_Cover">
           <div class="text-box">
-            <div class="project-title"><br>84,3 m3/h</div>
             <div class="project-subtitle">2023</div>
+            <div class="project-title">84,3 m3/h</div>
           </div>
         </div>
       </a>
@@ -109,8 +109,8 @@
         <div class="project">
           <img class="gallery" src="2023/2023_SAD_Cover.jpg" alt="">
           <div class="text-box">
-            <div class="project-title"><br>SAD</div>
             <div class="project-subtitle">2023</div>
+            <div class="project-title">SAD</div>
           </div>
         </div>
       </a>
@@ -118,8 +118,8 @@
         <div class="project">
           <img class="gallery" src="2022/2022_RDAC_Cover.jpg" alt="">
           <div class="text-box">
-            <div class="project-title"><br>RD:AC</div>
             <div class="project-subtitle">2022</div>
+            <div class="project-title">RD:AC</div>
           </div>
         </div>
       </a>
@@ -127,8 +127,8 @@
         <div class="project">
           <img class="gallery" src="2022/2022_ForumMentoring_Brochure_Cover.jpg" alt="">
           <div class="text-box">
-            <div class="project-title"><br>Quality Standard Brochure</div>
             <div class="project-subtitle">2022</div>
+            <div class="project-title">Quality Standard Brochure</div>
           </div>
         </div>
       </a>
@@ -136,8 +136,8 @@
         <div class="project">
           <img class="gallery" src="2021/2021_WatchOut_1.jpg" alt="">
           <div class="text-box">
-            <div class="project-title"><br>Watch Out!</div>
             <div class="project-subtitle">2021</div>
+            <div class="project-title">Watch Out!</div>
           </div>
         </div>
       </a>
@@ -145,8 +145,8 @@
         <div class="project">
           <img class="gallery" src="2021/2021_Sunrisepunk_4.jpg" alt="">
           <div class="text-box">
-            <div class="project-title"><br>Sunrisepunk</div>
             <div class="project-subtitle">2021</div>
+            <div class="project-title">Sunrisepunk</div>
           </div>
         </div>
       </a>
@@ -154,8 +154,8 @@
         <div class="project">
           <img class="gallery" src="2021/2021_BlueOdyssey_1.jpg" alt="">
           <div class="text-box">
-            <div class="project-title"><br>Blue Odyssey</div>
             <div class="project-subtitle">2021</div>
+            <div class="project-title">Blue Odyssey</div>
           </div>
         </div>
       </a>
@@ -163,8 +163,8 @@
         <div class="project">
           <img class="gallery" src="2020/2020_ClandestineCult_6.jpg" alt="">
           <div class="text-box">
-            <div class="project-title"><br>Clandestine Cult</div>
             <div class="project-subtitle">2020</div>
+            <div class="project-title">Clandestine Cult</div>
           </div>
         </div>
       </a>
@@ -173,8 +173,8 @@
           <img class="gallery" src="2019/2019_more_about_robots_BusinessCard_2.jpg"
             alt="/2019_more_about_robots_BusinessCard_Cover">
           <div class="text-box">
-            <div class="project-title"><br>Business Card</div>
             <div class="project-subtitle">2019</div>
+            <div class="project-title">Business Card</div>
           </div>
         </div>
       </a>
@@ -182,8 +182,8 @@
         <div class="project">
           <img class="gallery" src="2018/2018_SpaceJellyfish_Cover.jpg" alt="2018_SpaceJellyfish_Cover">
           <div class="text-box">
-            <div class="project-title"><br>Space Jellyfish</div>
             <div class="project-subtitle">2018</div>
+            <div class="project-title">Space Jellyfish</div>
           </div>
         </div>
       </a>
@@ -191,8 +191,8 @@
         <div class="project">
           <img class="gallery" src="2017/2017_M302_Cover.jpg" alt="2017_M302_Cover">
           <div class="text-box">
-            <div class="project-title"><br>M 3.02</div>
             <div class="project-subtitle">2017</div>
+            <div class="project-title">M 3.02</div>
           </div>
         </div>
       </a>
