Work devided into Art and Design.

--- a/index.html
+++ b/index.html
@@ -329,7 +329,8 @@
       <div class="logo"><a href="index.html"><img src="assets/logo.svg" alt=""></a></div>
       <div class="openMenu"><img src="assets/menu_FILL0_wght400_GRAD0_opsz48.svg" alt=""></div>
       <ul class="mainMenu">
-        <li><a href="pages/work.html">Work</a></li>
+        <li><a href="pages/art.html">Art</a></li>
+        <li><a href="pages/design.html">Design</a></li>
         <li><a href="pages/about.html">About</a></li>
         <div class="closeMenu"><img src="assets/close_FILL0_wght400_GRAD0_opsz48.svg" alt=""></div>
       </ul>
