--- a/pages/art.html
+++ b/pages/art.html
@@ -16,7 +16,8 @@
       <div class="logo"><a href="../index.html"><img src="../assets/logo.svg" alt=""></a></div>
       <div class="openMenu"><img src="../assets/menu_FILL0_wght400_GRAD0_opsz48.svg" alt=""></div>
       <ul class="mainMenu">
-        <li><a href="work.html" style="color: #fff;">Work</a></li>
+        <li><a href="art.html" style="color: #fff;">Art</a></li>
+        <li><a href="design.html">Design</a></li>
         <li><a href="about.html">About</a></li>
         <div class="closeMenu"><img src="../assets/close_FILL0_wght400_GRAD0_opsz48.svg" alt=""></div>
       </ul>
@@ -42,39 +43,12 @@
           </div>
         </div>
       </a>
-      <a href="2024/2024_gn_website.html">
-        <div class="project">
-          <img class="gallery" src="2024/2024_GN_Website_Cover.jpg" alt="2024_GN_Website_Cover">
-          <div class="text-box">
-            <div class="project-subtitle">2024</div>
-            <div class="project-title">g-n.fi</div>
-          </div>
-        </div>
-      </a>
-      <a href="2024/2024_adungu_and_engoma.html">
-        <div class="project">
-          <img class="gallery" src="2024/2024_Adungu_1.jpg" alt="2024_Adungu_Cover">
-          <div class="text-box">
-            <div class="project-subtitle">2024</div>
-            <div class="project-title">Adungu & Engoma</div>
-          </div>
-        </div>
-      </a>
       <a href="2024/2024_hibiscus.html">
         <div class="project">
           <img class="gallery" src="2024/2024_Hibiscus_Cover.jpg" alt="2024_Hibiscus_Cover">
           <div class="text-box">
             <div class="project-subtitle">2024</div>
             <div class="project-title">Hibiscus</div>
-          </div>
-        </div>
-      </a>
-      <a href="2024/2024_marko_vuokola_nordea.html">
-        <div class="project">
-          <img class="gallery" src="2024/2024_MarkoVuokola_Nordea_1.jpg" alt="2024_MarkoVuokola_Nordea_Cover">
-          <div class="text-box">
-            <div class="project-subtitle">2024</div>
-            <div class="project-title">Screen Installation<br>Concept Visualisation</div>
           </div>
         </div>
       </a>
@@ -96,15 +70,6 @@
           </div>
         </div>
       </a>
-      <a href="2023/2023_gn_843m3h.html">
-        <div class="project">
-          <img class="gallery" src="2023/2023_GN_843m3h_Cover.jpg" alt="2023_GN_843m3h_Cover">
-          <div class="text-box">
-            <div class="project-subtitle">2023</div>
-            <div class="project-title">84,3 m3/h</div>
-          </div>
-        </div>
-      </a>
       <a href="2023/2023_sad.html">
         <div class="project">
           <img class="gallery" src="2023/2023_SAD_Cover.jpg" alt="">
@@ -120,15 +85,6 @@
           <div class="text-box">
             <div class="project-subtitle">2022</div>
             <div class="project-title">RD:AC</div>
-          </div>
-        </div>
-      </a>
-      <a href="2022/2022_forum_mentoring_brochure.html">
-        <div class="project">
-          <img class="gallery" src="2022/2022_ForumMentoring_Brochure_Cover.jpg" alt="">
-          <div class="text-box">
-            <div class="project-subtitle">2022</div>
-            <div class="project-title">Quality Standard Brochure</div>
           </div>
         </div>
       </a>
@@ -165,16 +121,6 @@
           <div class="text-box">
             <div class="project-subtitle">2020</div>
             <div class="project-title">Clandestine Cult</div>
-          </div>
-        </div>
-      </a>
-      <a href="2019/2019_business_card.html">
-        <div class="project">
-          <img class="gallery" src="2019/2019_more_about_robots_BusinessCard_2.jpg"
-            alt="/2019_more_about_robots_BusinessCard_Cover">
-          <div class="text-box">
-            <div class="project-subtitle">2019</div>
-            <div class="project-title">Business Card</div>
           </div>
         </div>
       </a>
