--- a/pages/about.html
+++ b/pages/about.html
@@ -16,7 +16,8 @@
       <div class="logo"><a href="../index.html"><img src="../assets/logo.svg" alt=""></a></div>
       <div class="openMenu"><img src="../assets/menu_FILL0_wght400_GRAD0_opsz48.svg" alt=""></div>
       <ul class="mainMenu">
-        <li><a href="work.html">Work</a></li>
+        <li><a href="art.html">Art</a></li>
+        <li><a href="design.html">Design</a></li>
         <li><a href="about.html" style="color: #fff;">About</a></li>
         <div class="closeMenu"><img src="../assets/close_FILL0_wght400_GRAD0_opsz48.svg" alt=""></div>
       </ul>
