--- a/pages/YEAR_template/YEAR_template.html
+++ b/pages/YEAR_template/YEAR_template.html
@@ -64,9 +64,7 @@
       </div>
       <div class="column right">
         <p>Client/Collaboration</p>
-        <h2>
-          [Add Client/Collaborator]
-        </h2>
+        <h2>[Add Client/Collaborator]</h2>
         <br>
         <p>Software</p>
         <h2>
