Start background video playsinline added (iOS fix).

--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@
     <div class="slide"></div>
   </div> -->
   <div class="background-video">
-    <video src="videos/20230817_PortfolioBackgroundVideo.mp4" frameBorder="0" autoplay muted loop>
+    <video src="videos/20230817_PortfolioBackgroundVideo.mp4" playsinline autoplay muted loop>
     </video>
   </div>
   <div class="quote">
