Contact button added.

--- a/pages/about.html
+++ b/pages/about.html
@@ -19,6 +19,10 @@
         <li><a href="art.html">Art</a></li>
         <li><a href="design.html">Design</a></li>
         <li><a href="about.html" style="color: #fff;">About</a></li>
+        <li>
+          <a href="mailto:tino.selic@gmail.com" target="_blank"></a>
+          <div class="button" id="contact">Contact</div>
+        </li>
         <div class="closeMenu"><img src="../assets/close_FILL0_wght400_GRAD0_opsz48.svg" alt=""></div>
       </ul>
     </nav>
@@ -56,7 +60,7 @@
     </p>
     <br>
     <br>
-    <br>
+    <div class="line"></div>
     <br>
     <br>
     <h1>Clients</h1>
@@ -76,50 +80,16 @@
       <br>
       <br>
       more_about_robots GmbH (Bernd Liepert)
-    </h2><!-- 
-        <h1>Experience</h1>
-        <br>
-        <p>
-          <b><a href="https://g-n.fi/" target="_blank">Grönlund-Nisunen</a></b>
-          <br>
-          Web Designer and Developer
-          <br>
-          Helsinki, Finland
-          <br>
-          September 2023 - Present
-        </p>
-        <br>
-        <p>
-          <b><a href="https://g-n.fi/" target="_blank">Grönlund-Nisunen</a></b>
-          <br>
-          Visual Art and Design Intern
-          <br>
-          Helsinki, Finland
-          <br>
-          June - September 2023
-        </p>
-        <br>
-        <p>
-          <b><a href="https://forum-mentoring.de/" target="_blank">Bundesverband Forum Mentoring e.V.</a></b>
-          <br>
-          Graphic Designer
-          <br>
-          Remote
-          <br>
-          August - October 2022
-        </p> -->
+    </h2>
     <br>
     <br>
+    <div class="line"></div>
     <br>
     <br>
-    <br>
-    <h1>Contact & Links</h1>
+    <h1>Links</h1>
     <br>
     <br>
     <h2>
-      <a href="mailto:tino.selic@gmail.com" target="_blank">Email</a>
-      <br>
-      <br>
       <a href="https://www.linkedin.com/in/tino-selic/" target="_blank">LinkedIn</a>
       <br>
       <br>
