--- a/index.html
+++ b/index.html
@@ -153,6 +153,24 @@
       color: #999;
     }
 
+    .button {
+      font-size: 48px;
+      color: #999;
+      border: solid 2px #999;
+      border-radius: 60px;
+      width: fit-content;
+      margin-top: 30px;
+      padding: 3px 24px;
+      transition-duration: 0.5s;
+    }
+
+    .button:hover {
+      border: solid 2px #fff;
+      background-color: #fff;
+      color: #000;
+      cursor: pointer;
+    }
+
     video {
       display: flex;
       justify-content: center;
@@ -248,6 +266,13 @@
       nav .mainMenu .closeMenu {
         display: none;
       }
+
+      .button {
+        font-size: 16px;
+        color: #999;
+        border: solid 2px #999;
+        padding: 3px 12px;
+      }
     }
 
     @media only screen and (min-width: 1280px) {
@@ -332,6 +357,9 @@
         <li><a href="pages/art.html">Art</a></li>
         <li><a href="pages/design.html">Design</a></li>
         <li><a href="pages/about.html">About</a></li>
+        <li>
+          <div class="button" id="contact">Contact</div>
+        </li>
         <div class="closeMenu"><img src="assets/close_FILL0_wght400_GRAD0_opsz48.svg" alt=""></div>
       </ul>
     </nav>
@@ -359,6 +387,7 @@
     const openMenu = document.querySelector('.openMenu');
     const main = document.querySelector('main');
     const nav = document.querySelector('nav');
+    const contact = document.getElementById('contact');
     const footer = document.getElementById("copyright");
 
 
@@ -379,6 +408,12 @@
       openMenu.style.display = 'block';
       main.style.display = 'block';
     }
+
+    // Contact/Email button interaction
+    contact.addEventListener('click', function () {
+      const mailtoLink = 'mailto:tino.selic@gmail.com}';
+      window.location.href = mailtoLink;
+    });
 
     // Footer
     document.addEventListener("DOMContentLoaded", function () {
