--- a/pages/design.html
+++ b/pages/design.html
@@ -19,6 +19,7 @@
         <li><a href="art.html">Art</a></li>
         <li><a href="design.html" style="color: #fff;">Design</a></li>
         <li><a href="about.html">About</a></li>
+        <li><div class="button" id="contact">Contact</div></li>
         <div class="closeMenu"><img src="../assets/close_FILL0_wght400_GRAD0_opsz48.svg" alt=""></div>
       </ul>
     </nav>
