--- a/pages/art.html
+++ b/pages/art.html
@@ -30,7 +30,7 @@
         <div class="project">
           <img class="gallery" src="2024/2024_AURORA_Cover.jpg" alt="2024_AURORA_Cover">
           <div class="text-box">
-            <div class="project-subtitle">2024</div>
+            <div class="project-subtitle">2024<br>Interactive Experience</div>
             <div class="project-title">AURORA</div>
           </div>
         </div>
@@ -39,7 +39,7 @@
         <div class="project">
           <img class="gallery" src="2024/2024_Hibiscus_Cover.jpg" alt="2024_Hibiscus_Cover">
           <div class="text-box">
-            <div class="project-subtitle">2024</div>
+            <div class="project-subtitle">2024<br>Game Design</div>
             <div class="project-title">Hibiscus</div>
           </div>
         </div>
@@ -48,7 +48,7 @@
         <div class="project">
           <img class="gallery" src="2023/2023_Piru_Cover.jpg" alt="2023_Piru_Cover">
           <div class="text-box">
-            <div class="project-subtitle">2023</div>
+            <div class="project-subtitle">2023<br>3D Game Art</div>
             <div class="project-title">Piru</div>
           </div>
         </div>
@@ -57,7 +57,7 @@
         <div class="project">
           <img class="gallery" src="2023/2023_ColourAndPerception_Cover.jpg" alt="2023_ColourAndPerception_Cover">
           <div class="text-box">
-            <div class="project-subtitle">2023</div>
+            <div class="project-subtitle">2023<br>Colour Study</div>
             <div class="project-title">Colour and Perception</div>
           </div>
         </div>
@@ -66,7 +66,7 @@
         <div class="project">
           <img class="gallery" src="2023/2023_SAD_Cover.jpg" alt="">
           <div class="text-box">
-            <div class="project-subtitle">2023</div>
+            <div class="project-subtitle">2023<br>Psychedelic Animations</div>
             <div class="project-title">SAD</div>
           </div>
         </div>
@@ -75,7 +75,7 @@
         <div class="project">
           <img class="gallery" src="2022/2022_RDAC_Cover.jpg" alt="">
           <div class="text-box">
-            <div class="project-subtitle">2022</div>
+            <div class="project-subtitle">2022<br>Arduino Project</div>
             <div class="project-title">RD:AC</div>
           </div>
         </div>
@@ -84,7 +84,7 @@
         <div class="project">
           <img class="gallery" src="2021/2021_WatchOut_1.jpg" alt="">
           <div class="text-box">
-            <div class="project-subtitle">2021</div>
+            <div class="project-subtitle">2021<br>3D Art</div>
             <div class="project-title">Watch Out!</div>
           </div>
         </div>
@@ -93,7 +93,7 @@
         <div class="project">
           <img class="gallery" src="2021/2021_Sunrisepunk_4.jpg" alt="">
           <div class="text-box">
-            <div class="project-subtitle">2021</div>
+            <div class="project-subtitle">2021<br>3D Animation</div>
             <div class="project-title">Sunrisepunk</div>
           </div>
         </div>
@@ -102,7 +102,7 @@
         <div class="project">
           <img class="gallery" src="2021/2021_BlueOdyssey_1.jpg" alt="">
           <div class="text-box">
-            <div class="project-subtitle">2021</div>
+            <div class="project-subtitle">2021<br>3D Game Trailer</div>
             <div class="project-title">Blue Odyssey</div>
           </div>
         </div>
@@ -111,7 +111,7 @@
         <div class="project">
           <img class="gallery" src="2020/2020_ClandestineCult_6.jpg" alt="">
           <div class="text-box">
-            <div class="project-subtitle">2020</div>
+            <div class="project-subtitle">2020<br>3D Game Art & Level Design</div>
             <div class="project-title">Clandestine Cult</div>
           </div>
         </div>
@@ -120,7 +120,7 @@
         <div class="project">
           <img class="gallery" src="2018/2018_SpaceJellyfish_Cover.jpg" alt="2018_SpaceJellyfish_Cover">
           <div class="text-box">
-            <div class="project-subtitle">2018</div>
+            <div class="project-subtitle">2018<br>3D Animation</div>
             <div class="project-title">Space Jellyfish</div>
           </div>
         </div>
@@ -129,7 +129,7 @@
         <div class="project">
           <img class="gallery" src="2017/2017_M302_Cover.jpg" alt="2017_M302_Cover">
           <div class="text-box">
-            <div class="project-subtitle">2017</div>
+            <div class="project-subtitle">2017<br>Abstract Painting</div>
             <div class="project-title">M 3.02</div>
           </div>
         </div>
